添加新闻分类的选项卡

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,15 @@
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/tab_top_background</item>
+        <item name="colorPrimaryDark">@color/tab_top_background</item>
+        <item name="android:windowBackground">@color/tab_background</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:fitsSystemWindows">true</item>
+    </style>
 </resources>
