--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/img_network"
-        android:layout_width="@dimen/list_item_text_image_weight"
-        android:layout_height="58dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/load_fail_small"/>
-
-    <Button
-        android:id="@+id/btn_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="116dp"
-        android:text="Button"/>
-</RelativeLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:minHeight="36dp"
+        android:background="?attr/colorPrimary"/>
+    <com.shizhefei.view.viewpager.SViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#eee" />
+    <com.shizhefei.view.indicator.FixedIndicatorView
+        android:id="@+id/fixed_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/tab_background"/>
+</LinearLayout>
