广告图片的轮播

--- a/app/src/main/res/layout/news_image.xml
+++ b/app/src/main/res/layout/news_image.xml
@@ -28,7 +28,7 @@
         android:textColor="@color/list_item_vote_color"
         android:textSize="@dimen/list_vote_text_size"
         android:paddingRight="@dimen/list_item_vote_padding"/>
-    <ouyj.hyena.com.netease.widget.RecyclerImgView
+    <ouyj.hyena.com.infonews.widget.RecyclerImgView
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_big_image_item_height"
         android:id="@+id/rv_subrecycleview"
