--- a/app/src/main/res/layout/news_banner.xml
+++ b/app/src/main/res/layout/news_banner.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ouyj.hyena.com.netease.widget.SwitchImage
+    <ouyj.hyena.com.infonews.widget.SwitchImage
         xmlns:personattr="http://schemas.android.com/apk/res/ouyj.hyena.com.infonews"
         android:id="@+id/si_banner_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         personattr:is_last_item_to_next_or_stop="true">
-    </ouyj.hyena.com.netease.widget.SwitchImage>
+    </ouyj.hyena.com.infonews.widget.SwitchImage>
 
 </RelativeLayout>
