新闻图片列表的处理

--- a/app/src/main/res/layout/switch_guide.xml
+++ b/app/src/main/res/layout/switch_guide.xml
@@ -18,7 +18,7 @@
             android:layout_marginLeft="@dimen/list_margin_left_and_right"
             android:layout_marginRight="5dp"/>
         <TextView
-            android:id="@+id/tv_banner_title_text"
+            android:id="@+id/banner_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
