--- a/app/src/main/res/layout/item_guide.xml
+++ b/app/src/main/res/layout/item_guide.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     <ImageView
-        android:id="@+id/iguide_img"
+        android:id="@+id/img_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
